output/c and c++/api/turing_api.hpp

    Vec2 dequeue_vec2();
    uint32_t enqueue_vec2(const Vec2& v);
    Vec3 dequeue_vec3();
    uint32_t enqueue_vec3(const Vec3& v);
    Vec4 dequeue_vec4();
    uint32_t enqueue_vec4(const Vec4& v);
    Quat dequeue_quat();
    uint32_t enqueue_quat(const Quat& q);
    Mat4 dequeue_mat4();
    uint32_t enqueue_mat4(const Mat4& m);
struct Log;
struct Log {
    

    
    static void warn(std::string_view msg);
    static void info(std::string_view msg);
    static void debug(std::string_view msg);
    static void critical(std::string_view msg);

    
    
};
    
    
    
    
    
    
    
    
    
    TURING_API_EXPORT void _log__warn(const char* msg);
    TURING_API_EXPORT void _log__info(const char* msg);